--- a/7.Practice/index.html
+++ b/7.Practice/index.html
@@ -88,7 +88,21 @@
         </div>
     </nav>
 
-
+    <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-dark p-4">
+            <h5 class="text-white h4">Collapsed content</h5>
+            <span class="text-muted">Toggleable via the navbar brand.</span>
+        </div>
+    </div>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
 
     <!-- <div class="m-3 z-n1" style="height: 600px; background-color: rgba(61, 61, 61, 0.259);"></div>
       <div class="m-3 z-n1" style="height: 600px; background-color: rgba(0, 61, 61, 0.259);"></div>
