--- a/7.Practice/index.html
+++ b/7.Practice/index.html
@@ -88,13 +88,13 @@
         </div>
     </nav>
 
-    <div class="collapse" id="navbarToggleExternalContent">
+    <div class="mt-2 collapse" id="navbarToggleExternalContent">
         <div class="bg-dark p-4">
             <h5 class="text-white h4">Collapsed content</h5>
             <span class="text-muted">Toggleable via the navbar brand.</span>
         </div>
     </div>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class=" navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
