--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -26,6 +26,13 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
+    <label for="inputPassword5" class="form-label">Password</label>
+    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
+    <div id="passwordHelpBlock" class="form-text">
+        Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special
+        characters, or emoji.
+    </div>
+
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
