--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -27,13 +27,13 @@
     </form>
 
     <label for="inputPassword5" class="form-label">Password</label>
-    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
+    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" disabled>
     <div id="passwordHelpBlock" class="form-text">
         Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special
         characters, or emoji.
     </div>
 
-    <div class="row g-3 align-items-center">
+    <div class="row g-3 align-items-center container">
         <div class="col-auto">
             <label for="inputPassword6" class="col-form-label">Password</label>
         </div>
