--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <form class="container mt-4">
-        <fieldset>
+        <fieldsetD>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>s
+    <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
 </html>
