--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <form class="container mt-4">
-        <fieldsetD>
+    <form class="container mt-4 ">
+        <fieldset class="form-control form-control-sm">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
