--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -28,8 +28,8 @@
         </fieldset>
     </form>
 
-    <label for="inputPassword5" class="form-label">Password</label>
-    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
+    <label for="inputPassword5" class="form-label container">Password</label>
+    <input type="password" id="inputPassword5" class="form-control container form-control-sm" aria-describedby="passwordHelpBlock">
     <div id="passwordHelpBlock" class="form-text">
         Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special
         characters, or emoji.
