--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -35,7 +35,7 @@
         characters, or emoji.
     </div>
 
-    <div class="row g-3 align-items-center container">
+    <div class="row g-3 align-items-center container form-control form-control-sm">
         <div class="col-auto">
             <label for="inputPassword6" class="col-form-label">Password</label>
         </div>
