--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -40,7 +40,9 @@
             <label for="inputPassword6" class="col-form-label">Password</label>
         </div>
         <div class="col-auto">
-            <input type="password" id="inputPassword6" class="form-control" aria-describedby="passwordHelpInline">
+            <input type="password" id="inputPassword6" class="form-control" 
+            
+            aria-describedby="passwordHelpInline" disabled readonly>
         </div>
         <div class="col-auto">
             <span id="passwordHelpInline" class="form-text">
