--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -42,7 +42,7 @@
         <div class="col-auto">
             <input type="password" id="inputPassword6" class="form-control" 
             placeholder="Hello"
-            aria-describedby="passwordHelpInline" disabled readonly>
+            aria-describedby="passwordHelpInline" disabled>
         </div>
         <div class="col-auto">
             <span id="passwordHelpInline" class="form-text">
