--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -29,7 +29,8 @@
     </form>
 
     <label for="inputPassword5" class="form-label container">Password</label>
-    <input type="password" id="inputPassword5" class="form-control container form-control-sm" aria-describedby="passwordHelpBlock">
+    <input type="password" id="inputPassword5" class="form-control container form-control-sm"
+        aria-describedby="passwordHelpBlock">
     <div id="passwordHelpBlock" class="form-text">
         Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special
         characters, or emoji.
@@ -40,9 +41,8 @@
             <label for="inputPassword6" class="col-form-label">Password</label>
         </div>
         <div class="col-auto">
-            <input type="password" id="inputPassword6" class="form-control" 
-            placeholder="Hello"
-            aria-describedby="passwordHelpInline" disabled readonly>
+            <input type="password" id="inputPassword6" class="form-control" placeholder="Hello"
+                aria-describedby="passwordHelpInline" disabled readonly>
         </div>
         <div class="col-auto">
             <span id="passwordHelpInline" class="form-text">
