--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -52,7 +52,7 @@
     </div>
 
 
-    <div class="container">
+    <div class="container mt-5">
         <div class="mb-3">
             <label for="formFile" class="form-label">Default file input example</label>
             <input class="form-control" type="file" id="formFile">
