--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -75,7 +75,7 @@
           </div>
     </div>
 
-    <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script
 </body>
 
 </html>
