--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -76,6 +76,11 @@
     </div>
 
 
+    <div class="container">
+        <label for="exampleColorInput" class="form-label">Color picker</label>
+<input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
+    </div>
+
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
