--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -82,7 +82,7 @@
             title="Choose your color">
     </div>
 
-    <div class="container">
+    <div class="container bg">
         <label for="exampleDataList" class="form-label">Datalist example</label>
         <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
         <datalist id="datalistOptions">
