--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -94,7 +94,12 @@
         </datalist>
     </div>
 
-
+    <select class="form-select" aria-label="Default select example">
+        <option selected>Open this select menu</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
