--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -99,7 +99,10 @@
         <option value="1">One</option>
         <option value="2">Two</option>
         <option value="3">Three</option>
-      </select>
+    </select>
+
+    <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
+    <label class="btn btn-primary" for="btn-check">Single toggle</label>
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
