--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -101,8 +101,8 @@
         <option value="3">Three</option>
     </select>
 
-    <div>
-        <input type="checkbox" class="container btn-check m-5" id="btn-check" autocomplete="off">
+    <div class="container m-4"> 
+        <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
         <label class="btn btn-primary" for="btn-check">Single toggle</label>
     </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
