--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -121,6 +121,17 @@
     <div class="container bg-secondary">
         <label for="customRange1" class="form-label">Example range</label>
         <input type="range" class="form-range bg-" id="customRange1">
+
+        <div class="input-group has-validation">
+            <span class="input-group-text">@</span>
+            <div class="form-floating is-invalid">
+              <input type="text" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Username" required>
+              <label for="floatingInputGroup2">Username</label>
+            </div>
+            <div class="invalid-feedback">
+              Please choose a username.
+            </div>
+          </div>
     </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
