--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -125,13 +125,14 @@
         <div class="input-group has-validation">
             <span class="input-group-text">@</span>
             <div class="form-floating is-invalid">
-              <input type="text" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Username" required>
-              <label for="floatingInputGroup2">Username</label>
+                <input type="text" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Username"
+                    required>
+                <label for="floatingInputGroup2">Username</label>
             </div>
             <div class="invalid-feedback">
-              Please choose a username.
+                Please choose a username.
             </div>
-          </div>
+        </div>
     </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
