--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -134,6 +134,10 @@
             </div>
         </div>
     </div>
+
+    <div class="container">
+        
+    </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
