--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -136,7 +136,14 @@
     </div>
 
     <div class="container">
-        
+        <div class="row">
+            <div class="col">
+              <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+            </div>
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+            </div>
+          </div>
     </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
