--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -135,7 +135,7 @@
         </div>
     </div>
 
-    <div class="container mt-5">
+    <div class="container m-5">
         <div class="row">
             <div class="col">
                 <input type="text" class="form-control" placeholder="First name" aria-label="First name">
