--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -213,6 +213,10 @@
             </div>
         </form>
     </div>
+
+    <div class="container">
+        
+    </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
