--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -309,7 +309,9 @@
         </form>
     </div>
 
-    
+    <div class="container">
+        
+    </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
