--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -304,7 +304,7 @@
             </div>
 
             <div class="mb-3">
-                <button class="btn btn-primary" type="submit" disabled>Submit form</button>
+                <button class="btn btn-primary" type="submit" >Submit form</button>
             </div>
         </form>
     </div>
