--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -367,6 +367,10 @@
     </div>
 
 
+    <div class="container">
+        
+    </div>
+
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
     <script src="../npm-packages/node_modules/@popperjs/core/dist/cjs/popper.js"></script>
