--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -367,8 +367,10 @@
     </div>
 
 
-    <div class="container">
-        
+    <div class="container .bg-dark.bg-gradient">
+        <div class="row">
+            
+        </div>
     </div>
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
