--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -369,13 +369,15 @@
 
     <div class="container mt-5 .bg-dark.bg-gradient">
         <div class="row">
-            <button type="button" class="btn btn-primary position-relative">
-                Inbox
-                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                  99+
-                  <span class="visually-hidden">unread messages</span>
-                </span>
-              </button>
+            <div class="col-2">
+                <button type="button" class="btn btn-primary position-relative">
+                    Inbox
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                      99+
+                      <span class="visually-hidden">unread messages</span>
+                    </span>
+                  </button>
+            </div>
         </div>
     </div>
 
