--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -382,7 +382,9 @@
     </div>
 
 
-    
+    <div class="container">
+        
+    </div>
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
