--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -381,7 +381,9 @@
         </div>
     </div>
 
-    
+    <div class="container">
+        
+    </div>
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
