--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../npm-packages/node_modules/bootstrap/dist/css/bootstrap.css">
+
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -384,10 +386,10 @@
     <div class="container">
 
         <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
-  </button>
-  
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Launch demo modal
+        </button>
+
 
         <div class="modal" tabindex="-1">
             <div class="modal-dialog">
