--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../npm-packages/node_modules/bootstrap/dist/css/bootstrap.css">
 
-    <link rel="script" href="script.js">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -408,6 +408,15 @@
             </div>
         </div>
     </div>
+
+    <script>
+        const myModal = document.getElementById('myModal')
+        const myInput = document.getElementById('myInput')
+
+        myModal.addEventListener('shown.bs.modal', () => {
+            myInput.focus()
+        })
+    </script>
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
