--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -75,15 +75,16 @@
 
 
     <div>
-        
+        <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" data-bs-title="Popover title"
+            data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to toggle
+            popover</button>
     </div>
 
     <!-- JS scripts  -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
 </body>
 
 </html>
