--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -80,11 +80,17 @@
             popover</button>
     </div>
 
+    <div>
+        
+    </div>
+
     <!-- JS scripts  -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+
+        <script src="../npm-packages/node_modules/@popperjs/core/dist/cjs/popper.js"></script>
 </body>
 
 </html>
