--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -87,7 +87,9 @@
         </div>
     </div>
 
-
+<div>
+    
+</div>
     <!-- JS scripts  -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
