--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -87,8 +87,12 @@
         </div>
     </div>
 
-    <div>
-
+    <div class="container mt-4">
+        <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
+            aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:50%">
+                Wait...</div>
+        </div>
     </div>
     <!-- JS scripts  -->
 
