--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -96,7 +96,7 @@
     </div>
 
 
-    <div>
+    <div class="container-md">
         <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
             <a class="navbar-brand" href="#">Navbar</a>
             <ul class="nav nav-pills">
@@ -134,6 +134,8 @@
             <p>...</p>
         </div>
     </div>
+
+    
     <!-- JS scripts  -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
