--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -191,8 +191,12 @@
         </div>
     </div>
 
+    <div class="spinner">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
 
-    
     <!-- JS scripts  -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
