--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -191,7 +191,7 @@
         </div>
     </div>
 
-    <div class="spinner">
+    <div class="spinner m-5">
         <div class="spinner-border" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
