--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -221,7 +221,7 @@
         </div>
     </div>
 
-    <div>
+    <div class="container m-5">
         <div class="spinner-grow text-primary" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
