--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -221,7 +221,7 @@
         </div>
     </div>
 
-    <div class="container m-5 d-flex justify-content-center">
+    <div class="container d-flex justify-content-center">
         <div class="spinner-grow text-primary" role="status">
             <span class="visually-hidden">Loading...</span>
         </div>
