--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -248,7 +248,16 @@
         </div>
     </div>
 
-
+    <div>
+        <button class="btn btn-primary" type="button">
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            <span class="visually-hidden">Loading...</span>
+        </button>
+        <button class="btn btn-primary" type="button">
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            Loading...
+        </button>
+    </div>
 
     <!-- JS scripts  -->
 
