--- a/11.Practice/index.html
+++ b/11.Practice/index.html
@@ -14,7 +14,7 @@
 <body>
 
 
-    <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
+    <button type="button" class="btn btn-primary" id="liveToastBtn" onclick="toastTrigger()">Show live toast</button>
 
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
