--- a/4.Practice/index.html
+++ b/4.Practice/index.html
@@ -107,7 +107,17 @@
                         <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
                     </div>
                 </span>
-                !
+                <!DOCTYPE html>
+                <html lang="en">
+                <head>
+                    <meta charset="UTF-8">
+                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                    <title>Document</title>
+                </head>
+                <body>
+                    
+                </body>
+                </html>
             </div>
             <div class="col-sm-auto">
                 <span class="card m-3" style="width: 15rem;">
